<resources>
    <string name="tabbar_featured">Featured</string>
    <string name="tabbar_nearme">Near me</string>
    <string name="tabbar_chatroom">Messages</string>
    <string name="tabbar_notif">Notification</string>
    <string name="tabbar_more">More</string>
    <string name="threads">Threads</string>
    <string name="feeds">Feeds</string>
    <string name="facebook_app_id">252946771849973</string>
    <string name="fb_login_protocol_scheme">fb252946771849973</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">cdb0955fa630108b0679295fdf301a6c</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_connection_tittle">Failed to connect to internet</string>
    <string name="no_connection_message">Please check your device\'s internet connection and try again</string>
    <string name="no_chatroom_title">No Conversation</string>
    <string name="no_rel_title">No relationship</string>
    <string name="start_inviting_friends">Start making friends by inviting them to Hoocons</string>
    <string name="start_making_conversation">Start chatting with friends now..</string>
    <string name="start_chat">Start Chat</string>
    <string name="invite">Invite</string>
    <string name="null_notification_title">No notifications yet</string>
    <string name="null_notification_message">You have not received any notifications from your followed friends yet. Start making friends now! Click here</string>
    <string name="seemore">see more</string>
    <string name="nearme_user">User Around</string>
    <string name="nearme_event">Events Around</string>
    <string name="empty_local_screen_title">Your location is OFF</string>
    <string name="empty_local_screen_message">Turn on your device\'s location to see what is going on around you! Click here</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="confirm_code_explain">Enter the code that have been sent to your phone through SMS</string>
    <string name="send_code">Send code</string>
    <string name="verify">Verify</string>
    <string name="resend">Send again</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="user_info">User Information</string>
    <string name="user_display_name">Full name</string>
    <string name="user_nickname">Nickname</string>
    <string name="check">Check</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_number">Phone Number</string>
    <string name="error_phone_number">invalid phone number</string>
    <string name="registering">Registering..</string>
    <string name="error_empty_password">you must enter password</string>
    <string name="error_pass_not_match">password does not match</string>
    <string name="login_failed">Login failed! Please check username or password</string>
    <string name="server_error">Server error! Please try again later</string>
    <string name="warning">Warning</string>
    <string name="account_banned_warn">This account has been banned</string>
    <string name="fetch_user_info_error">Cannot fetch user data! Please check connection</string>
    <string name="no_connection">No Connection</string>
    <string name="new_user_question">New User?</string>
    <string name="new_user_detect_and_req_register">This phone has not registered with us yet! Register now</string>
    <string name="register">Register</string>
    <string name="not_now">Not Now</string>
    <string name="update">Update</string>
    <string name="nickname_error">Invalid nickname</string>
    <string name="not_enough_ages">too young! you are not allowed here</string>
    <string name="checked">Checked</string>
    <string name="requested">Requested</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="messages">Messages</string>
    <string name="nickname_unavailable">This nickname is taken</string>
    <string name="error_empty_nickname">Nickname must not be empty</string>
    <string name="error_empty_name">Please enter your full name</string>
    <string name="profile_required">Profile Required</string>
    <string name="upload_failed_tryagain">Upload failed! Please try again</string>
    <string name="error_empty_profile">Please provide a profile picture</string>
    <string name="birthday">Birthday</string>
    <string name="updating">Updating</string>
    <string name="bad_request">Can not connect to server!</string>
    <string name="relationship">Relationship</string>
    <string name="withdraw_friend_request">Withdraw friend request?</string>
    <string name="withdraw_friend_request_content">Other user will no longer see your friend request!</string>
    <string name="withdraw">Withdraw</string>
    <string name="request_ready">request ready</string>
    <string name="setting">Settings</string>
    <string name="setting_notif">Notifications</string>
    <string name="setting_account">Account</string>
    <string name="setting_emails">Emails</string>
    <string name="setting_login_as">login as hnguyen3@gmail.com</string>
    <string name="setting_signout">Sign Out</string>
    <string name="action_phone_login">Phone Verification</string>
    <string name="action_login">Already a member? Login</string>
    <string name="action_reset_password">Forget password? Reset now</string>
    <string name="action_allow_permission">Allow Permission</string>
    <string name="current_location">Current Location</string>
    <string name="action_register">Register an account</string>
    <string name="continue_with_phone_number">Continue with phone number</string>
    <string name="login_hint_text">Use phone number and password to identify</string>
    <string name="continue_text">Continue</string>
    <string name="reload">Try to Reload</string>
    <string name="welcome">Welcome to Hoocon community</string>
    <string name="welcome_desc">A newer, stronger way to connect \n everyone over the world</string>
    <string name="help_center">Help Center</string>
    <string name="rate_and_comment">Rate and Comment</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="privacy_and_term">Privacy and Terms</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="app_info">App Info</string>
    <string name="fun_activities">Fun Activities</string>
    <string name="add_more_contents">Add more contents</string>
    <string name="find_love">Find your match</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="return_user_question">Return user?</string>
    <string name="registered_account_detected">This phone number has been registered</string>
    <string name="meetouts">Meetout</string>
    <string name="content">Content</string>
    <string name="new_event">Event</string>
    <string name="new_channel">Create New Channel</string>
    <string name="skip">Skip</string>
    <string name="new_meetout">Meet out</string>
    <string name="checkin">Check in</string>
    <string name="delete_title">Delete?</string>
    <string name="delete_warning">All your changes will be permanently removed!</string>
    <string name="discard">Discard</string>
    <string name="new_event_hint">Write a message</string>
    <string name="event_mode">Mode</string>
    <string name="mode_public">Public. Everyone can see this event</string>
    <string name="short_public">Public</string>
    <string name="mode_friend">Friends. Only friends can see your event</string>
    <string name="mode_private">Private. Only you can see this event</string>
    <string name="mode_warning">Warning. Make this event under content warning</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="action_share">Share</string>
    <string name="liked">Liked</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="reply">Reply</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
    <string name="place_search">Search places around</string>
    <string name="around_me">Around Me</string>
    <string name="write_a_message">Write a message</string>
    <string name="location">Location</string>
    <string name="work">Work</string>
    <string name="hobbies">Hobbies</string>
    <string name="recent_event">Posted events</string>
    <string name="recently">Recently</string>
    <string name="event_posted_detail">have posted some events</string>
    <string name="in_the_past">in the past</string>
    <string name="new_meeting_title">Start a new meeting around you</string>
    <string name="new_meeting_desc">Connect with new people, learn something, play something and… actually do something</string>
    <string name="new_meeting_info_request">Provide us a brief description</string>
    <string name="meeting_name">Meeting Name</string>
    <string name="meeting_desc">Meeting Description</string>
    <string name="meeting_activities">Activities at the meeting</string>
    <string name="at_location">At Location</string>
    <string name="at_what_time">When it happens</string>
    <string name="add_time_frame">Add time frame</string>
    <string name="add_media_for_meeting">Add some medias</string>
    <string name="select_location">Select a location</string>
    <string name="select_topics">Add topics to the meeting</string>
    <string name="select_hobbies">Add Hobbies</string>
    <string name="example_hobbies">Example Hobbies</string>
    <string name="pick">Pick</string>
    <string name="new_meeting">Start a meeting</string>
    <string name="from_date">From date time</string>
    <string name="to_date">To date time</string>
    <string name="action_delete">Delete</string>
    <string name="task_failed">Failed! Please check connection</string>
    <string name="love">Love</string>
    <string name="loved">Loved</string>
    <string name="already_created">already created…</string>
    <string name="msg_now">just now</string>
    <string name="msg_today">today</string>
    <string name="msg_yesterday">yesterday</string>
    <string name="msg_few_minutes_ago">minutes ago</string>
    <string name="posting">Posting…</string>
    <string name="new_activity">Create new activity</string>
    <string name="view_all_request">View all requests</string>
    <string name="view_more">View More</string>
    <string name="meetout_created">Meetout hosted</string>
    <string name="view_details">Details</string>
    <string name="post_meetout_success">Posted meetout successfully</string>
    <string name="post_meetout_failed">Post meetout failed</string>
    <string name="meetout_topics_error">Please provides more than two activities at the meetout</string>
    <string name="invalid_time_frame">Invalid time frame…</string>
    <string name="invalid_content">Invalid content…</string>
    <string name="meetout_name_empty_error">please provide meetout name</string>
    <string name="meetout_name_invalid_title">Invalid meetout name</string>
    <string name="meetout_name_invalid_error">Name must contains more than 10 alphanumeric characters (no special characters)</string>
    <string name="channel_category_asking">Choose a category for your channel</string>
    <string name="channel_category_ask_info">Let user know the category of your channel</string>
    <string name="category">category</string>
    <string name="suggested_category">Our suggested categories</string>
</resources>