<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/empty_chat_screen"/>

    <TextView
        android:layout_marginTop="@dimen/margin_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/no_chatroom_title"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="@dimen/text_16"/>

    <TextView
        android:id="@+id/message"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginLeft="@dimen/margin_48"
        android:layout_marginRight="@dimen/margin_48"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_making_conversation"
        android:maxLines="3"
        android:textSize="@dimen/text_14"/>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/empty_add_chat_btn"
        android:background="@drawable/add_chat_button"
        android:clickable="true">

        <ImageView
            android:layout_marginStart="@dimen/margin_10"
            android:layout_gravity="center_vertical"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_chat_white_24dp"/>

        <TextView
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_16"
            android:id="@+id/empty_btn_text"
            android:layout_margin="@dimen/margin_12"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_chat"/>
    </LinearLayout>
</LinearLayout>