<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardCornerRadius="@dimen/activity_card_corner">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo_image"
                android:layout_marginTop="@dimen/margin_48"
                android:layout_centerHorizontal="true"
                android:layout_width="@dimen/intro_logo_size"
                android:layout_height="@dimen/intro_logo_size"
                android:src="@drawable/plain_hoocons_image"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/slogin_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/welcome"
                android:layout_below="@id/logo_image"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/slide_title"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/slogin_title"
                android:layout_marginTop="@dimen/margin_16"
                android:id="@+id/slogin_desc"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/welcome_desc"
                android:textSize="@dimen/slide_desc"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/login_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_phone_number"
                android:textSize="@dimen/text_16"
                android:textStyle="normal"
                android:background="@drawable/active_button"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/margin_24"
                android:layout_marginRight="@dimen/margin_24"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_above="@+id/register_btn"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_marginBottom="@dimen/margin_24"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/register_btn"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/action_register"
                android:textColor="@color/black"
                android:textSize="@dimen/text_12"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>